--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a11y-dashboard",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "author": "Valentin von Guttenberg <greengiraffe@posteo.de>",
   "contributors": [
@@ -10,14 +10,14 @@
   "dependencies": {
     "async": "^2.6.0",
     "graphite": "^0.1.2",
-    "pa11y": "^5.0.3",
-    "webcoach": "^3.0.0"
+    "html-validator": "^3.1.3",
+    "pa11y": "^5.0.3"
   },
   "scripts": {
     "start": "node index.js"
   },
   "devDependencies": {
-    "eslint": "^5.9.0",
+    "eslint": "^5.10.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^8.0.0",
