--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.6.0",
+    "cssstats": "^3.2.0",
     "graphite": "^0.1.2",
     "html-validator": "^3.1.3",
     "pa11y": "^5.0.3"
