--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "cssstats": "^3.2.0",
+    "get-css": "^1.2.7-2",
     "graphite": "^0.1.2",
     "html-validator": "^3.1.3",
     "pa11y": "^5.0.3"
