--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "async": "^2.6.0",
+    "async": "^2.6.2",
+    "broken-link-checker": "^0.7.8",
     "cssstats": "^3.2.0",
     "get-css": "^1.2.7-2",
     "graphite": "^0.1.2",
@@ -19,9 +20,9 @@
     "start": "node index.js"
   },
   "devDependencies": {
-    "eslint": "^5.12.1",
+    "eslint": "^5.15.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0"
