--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.6.2",
-    "cssstats": "^3.2.0",
-    "get-css": "^1.2.7-2",
+    "cssstats": "^3.3.0",
+    "get-css": "^3.3.0",
     "graphite": "^0.1.2",
-    "html-validator": "^4.0.0",
+    "html-validator": "^4.0.2",
     "pa11y": "^5.0.3"
   },
   "scripts": {
     "start": "node index.js"
   },
   "devDependencies": {
-    "eslint": "^5.15.1",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0"
   }
 }
