--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "get-css": "^3.3.0",
     "graphite": "^0.1.2",
     "html-validator": "^4.0.3",
+    "lighthouse": "^5.0.0",
+    "lighthouse-plugin-field-performance": "^1.0.3",
     "pa11y": "^5.0.3"
   },
   "scripts": {
