--- a/k8s/kube.config
+++ b/k8s/kube.config
@@ -2,6 +2,6 @@ contexts:
 - context:
     cluster: gke_zeitonline-gke-misc-prod_europe-west3-a_zon-misc-prod-1
     user: gke_zeitonline-gke-misc-prod_europe-west3-a_zon-misc-prod-1
-    namespace: a11y-connector
+    namespace: frontend-monitoring
   name: production
 current-context: production
