--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a11y-dashboard",
+  "name": "frontend-monitoring",
   "version": "1.1.0",
   "author": "Valentin von Guttenberg <greengiraffe@posteo.de>",
   "contributors": [
