--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ node_modules/
 logs
 *.log
 npm-debug.log*
+package-lock.json
 yarn-debug.log*
 yarn-error.log*
 
 reports/*
+sitespeed-result/*
 !reports/.gitkeep
