Add new check: count adplaces on CPs

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "pa11y": "node src/checks/pa11y/index.js",
     "webcoach": "node src/checks/webcoach/index.js",
     "homepagestats": "node src/checks/homepagestats/index.js",
-    "start": "npm run cssstats && npm run htmlvalidator && npm run pa11y && npm run homepagestats && npm run webcoach"
+    "adplaces": "node src/checks/adplaces/index.js",
+    "start": "npm run cssstats && npm run htmlvalidator && npm run pa11y && npm run homepagestats && npm run webcoach && npm run webcoach"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
