--- a/k8s/cron-job.yaml
+++ b/k8s/cron-job.yaml
@@ -78,3 +78,23 @@ spec:
             - run
             - homepagestats
           restartPolicy: OnFailure
+---
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: frontend-monitoring-adplaces
+spec:
+  concurrencyPolicy: Forbid
+  schedule: "*/30 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          containers:
+          - name: adplaces
+            image: registry.zeit.de/frontend-monitoring:v0.1
+            command:
+            - npm
+            - run
+            - adplaces
+          restartPolicy: OnFailure
