OPS-1492: Don't forget to 'apply'… :)

--- a/.drone.yml
+++ b/.drone.yml
@@ -33,7 +33,7 @@ steps:
       from_secret: gcp_service_account
   commands:
     - pushd k8s/ && kustomize edit set image eu.gcr.io/zeitonline-210413/frontend-monitoring:${DRONE_COMMIT} && popd
-    - kubectl --namespace frontend-monitoring --kustomize k8s/
+    - kubectl apply --namespace frontend-monitoring --kustomize k8s/
 
 volumes:
 - name: docker
