--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphite": "^0.1.4",
     "html-validator": "^5.1.14",
     "jsdom": "^16.3.0",
+    "node-fetch": "^2.6.1",
     "pa11y": "^5.3.0"
   },
   "scripts": {
