--- a/k8s/cron-job.yaml
+++ b/k8s/cron-job.yaml
@@ -98,3 +98,23 @@ spec:
             - run
             - adplaces
           restartPolicy: OnFailure
+---
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: frontend-monitoring-unused-css-js
+spec:
+  concurrencyPolicy: Forbid
+  schedule: "*/55 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          containers:
+          - name: unused-css-js
+            image: eu.gcr.io/zeitonline-210413/frontend-monitoring:v0.1
+            command:
+            - npm
+            - run
+            - unused-css-js
+          restartPolicy: OnFailure
