--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build-and-deploy:
     name: Deploy Frontend Monitoring
-    runs-on: [self-hosted, Linux]
+    runs-on: [self-hosted, linux]
 
     permissions:
       id-token: write
