Replace gcr Registry

--- a/k8s/cron-job.yaml
+++ b/k8s/cron-job.yaml
@@ -12,7 +12,7 @@ spec:
         spec:
           containers:
           - name: pa11y
-            image: eu.gcr.io/zeitonline-210413/frontend-monitoring:v0.1
+            image: europe-west3-docker.pkg.dev/frontend-monitoring:v0.1
             command:
             - npm
             - run
@@ -33,7 +33,7 @@ spec:
         spec:
           containers:
           - name: cssstats
-            image: eu.gcr.io/zeitonline-210413/frontend-monitoring:v0.1
+            image: europe-west3-docker.pkg.dev/frontend-monitoring:v0.1
             command:
             - npm
             - run
@@ -54,7 +54,7 @@ spec:
         spec:
           containers:
           - name: htmlvalidator
-            image: eu.gcr.io/zeitonline-210413/frontend-monitoring:v0.1
+            image: europe-west3-docker.pkg.dev/frontend-monitoring:v0.1
             command:
             - npm
             - run
@@ -75,7 +75,7 @@ spec:
         spec:
           containers:
           - name: homepagestats
-            image: eu.gcr.io/zeitonline-210413/frontend-monitoring:v0.1
+            image: europe-west3-docker.pkg.dev/frontend-monitoring:v0.1
             command:
             - npm
             - run
@@ -96,7 +96,7 @@ spec:
         spec:
           containers:
           - name: adplaces
-            image: eu.gcr.io/zeitonline-210413/frontend-monitoring:v0.1
+            image: europe-west3-docker.pkg.dev/frontend-monitoring:v0.1
             command:
             - npm
             - run
