--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,3 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - cron-job.yaml
+images:
+- name: europe-west3-docker.pkg.dev/zeitonline-engineering/docker-zon/frontend-monitoring
+  newTag: latest
